# AniBaza_Converter

./: .gitignore  CHANGELOG.md  FAQ.py  FAQ.ui  LICENSE.txt  README.md  config.py  faqWindow.py  ffmpeginstall.bat  latest_version.json  logging.py  main.exe.manifest  main.py  mainWindow.py  newffmpeginstall.bat  newfontsinstall.bat  normUI2.py  normUI2.ui  palette.xml  pyproject.toml  renderThread.py  requirements.txt  resourses.qrc  resourses_rc.py  tempCodeRunnerFile.py  text
UI/: FAQ.py  FAQ.ui  FAQ_ui.py  normUI2.py  normUI2.ui  normUI2_ui.py  resourses.qrc
configs/: config.ini  config.py  current_version.ini
docs/: FFMPEG_CONSTRUCTOR_REFACTOR.md  PROCESS_RUNNER_INTEGRATION.md  RENDERING_PATHS_REFACTOR.md  render-queue.md
input/: in.srt  inИ.ass
logo/: AniBaza_Logo16x9.ass
models/: __init__.py  encoding.py  enums.py  ffmpeg_options.py  job.py  job_queue.py  protocols.py  render_paths.py  video_info.py
modules/: AppUpdater.py  ConfigModule.py  FFmpegConstructor.py  GlobalExceptionHandler.py  LoggingModule.py  ffmpeg_builder.py  ffmpeg_factory.py  process_runner.py
resources/: styles.qss
tests/: __init__.py  conftest.py  test_app_updater.py  test_config.py  test_config_module.py  test_enums.py  test_error_display.py  test_ffmpeg_builder.py  test_ffmpeg_constructor.py  test_ffmpeg_factory.py  test_ffmpeg_options.py  test_global_exception_handler.py  test_job_queue.py  test_job_queue_widget.py  test_logging_module.py  test_main.py  test_main_window.py  test_process_runner.py  test_queue_integration.py  test_queue_processor.py  test_render_job.py  test_render_paths.py  test_render_thread.py  (+2 more)
(+24 files in other folders)
